Added full implementation of custom colors. Bug fixes.
You can now set your own colors to the LED editor.. Detailed description
in the forum thread.

--- a/Launchpad-LED-Editor/GUI/CustomColors.resx
+++ b/Launchpad-LED-Editor/GUI/CustomColors.resx
@@ -117,4 +117,100 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAICAAAAEAIACoEAAAJgAAABAQAAABACAAaAQAAM4QAAAoAAAAIAAAAEAAAAABACAAAAAAAAAQ
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAHeL4UBIHPdAZ/y4YFfsqGBX7KhgV+yoYFfsqGBX7KhgV/yoYFf8qGBX/KhgV/yoYFfsqGBX/KhgV/
+        yoYFfsqGBX7KhgV+yoYFf8qGBn3IhwOD03sFfscpAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAABnrBKQh6wOIdQFf/HjtM/x09UP8dPVH/HT5R/x0+Uf8dPVH/HT1R/x09Uf8dPVH/HT1R/x09
+        Uf8dPVH/HT1R/x0+Uf8dPlH/HT1R/x09UP8eO03/Hj1Q/w1tqfYEgM1MAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAxsqQoKdLblKCEZ/y8NAP8xCAD/MQcA/zEIAP8rGg//KxoQ/zEJAP8xBwD/MQcA/ywX
+        Cv8pHRb/MAsA/zEHAP8xBgD/LRQE/yggFv8vDwD/MQYA/zEGAP8wCwD/LRQB/w5pof8Id7wvAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAA4bXbxlKZ/8wCwD/Iy82/xZVff8VV4H/FlJ2/yYmJv8mJST/FlF1/xVX
+        gf8VVn7/Iywy/ykeF/8ZSmj/FVmC/xVZhP8hNEH/KxcV/xxBWP8VW4T/FVuF/x0/U/8vDQD/IDlJ/wKK
+        3pEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABjuaOG0Vg/zIHAP8bRF7/AKj//wCh//8Aof//Iy0y/yUo
+        Kv8Anv//AKH//wCp//8cQFf/LhEA/wGL4P8Ap///AK7//xVTev80AAD/CnOz/wCu//8Ar///Dmmi/zEI
+        AP8hND//A4jclgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKQ6YUaSGX/MgUA/xpHYv8Apv//AJn7/wCe
+        //8jLzb/JSos/wCc/v8Amvz/AKb//xxCWv8uEgL/Aonc/wCg//8Aqv//FVR7/zMCAP8LcbH/AKj//wCq
+        //8OaKD/MQgA/yA3Rf8Ei9+RAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABZLphBtJZv8vCwH/HzpK/waI
+        2v8Eh9f/B4HO/yUpLP8mJib/B3/K/wWH2P8Gidv/IDhG/ywWCP8McrD/BYve/wWP4P8bR2L/MAkD/xJf
+        j/8FkOL/BZDi/xVYgv8vDAH/ITdF/weN4JEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJlOqEHUpm/ykZ
+        C/8oIBr/LBAA/ysTBf8sEAD/JyQi/yclJP8sEQD/KxME/ywQAP8oIBz/JSks/ysUBv8rEgL/Kw8A/yke
+        F/8kLCv/KhkO/ysQAf8rEAH/KRoR/ygeFP8hOEX/C4/hkQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA+X
+        7IMfS2b/KhMH/yUpLP8gPlD/Hz9R/yA8Tf8mJiX/JiYl/yA8TP8fP1L/Hz5Q/yUpLP8nIh7/IThG/x8/
+        Uv8fP1L/JC0z/ygfH/8iND7/H0BS/x9AUv8jMjv/KRcO/yI4Rv8RkuOQAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAFZrugiFMZ/8sBAD/H0Ze/wew//8JqP//Caj//yUtMv8mKCn/CaX//wmp//8Hsf//IEFX/ysQ
+        AP8OkeP/B6///wa3//8bVnv/LwAA/xR3tf8Gt///Bbj//xZto/8tBQD/IzlG/xaV5ZAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAanvCCIk1o/ysBAP8hSmT/Ebb//xOo//8Trv//JTA3/yYqLf8Tqv//E6n//xG2
+        //8hRVz/KQ8A/xaV5P8SsP//Ebr//x9af/8sAAD/Gnu3/xG4//8Ru///G3Gm/ysEAP8kOUb/G5nnkAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAB+h8YAkTmj/KAMA/yRDV/8crPr/Haf7/xyk+P8lLC//Jico/x2h
+        8/8cpvz/HK36/yRAUf8oEAL/Ho7S/xys/v8bs/3/IlRz/ykBAP8gdan/HLP+/xu1/v8ha5n/KAUA/yU5
+        R/8gm+iPAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJaTzfyZPaP8mFAj/JiQj/yYlJv8mJyn/JiUk/yYk
+        JP8mJST/JiUk/yYnKf8mJSb/JiQj/yYmJv8mJSX/Jicp/yYmKP8mJST/JiYm/yYlJf8mJyj/JiYo/yYl
+        Jf8mGRH/JjpH/yWe6Y8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAArp/SAKFBp/yUUCP8mIyL/JiAe/yYj
+        IP8mIR7/JiUk/yYlJf8mIR3/JiMg/yYhH/8mJCL/Jicn/yYiH/8mIyD/JiEg/yYjIv8mJyf/JiMg/yYi
+        IP8mIiD/JiMh/yYZEf8nO0f/K6LrjwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADCr9oApUWn/IwIA/ylG
+        Vv8ztvX/M6/5/zOt8/8nLC7/Jicp/zKq8v8zsPn/NLf1/ylCUv8kDwH/MJXS/zO2+P80vvf/K1hz/yIC
+        Af8ueqj/NL75/zS/+P8tcJj/IwIA/yg7R/8wpeyPAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANa73gCtS
+        af8hAAD/LFFl/z3R//87wf//PMf//ygxNf8mKi7/PMT//zvC//890f//K0xg/yIMAP84qu//Pcv//z7W
+        //8vZIP/HwAA/zSLv/8+1f//Ptf//zJ/rf8hAAD/KTxH/zWo7Y8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAA7sviBLVRp/x4AAP8vUGD/TNr//0rQ//9Kz///KC8x/yYoKv9Jy///StH//0zb//8uSlv/IAkA/0Sx
+        8v9M2f//TuP//zNkgf8bAAD/PZDA/07i//9P5P//OoOt/x4AAP8qPEf/OqzujwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAEK1+YIvVWn/IQ4G/ygsLv8wS1f/MUxY/zBIVf8mJib/JiUl/zBHVf8xTFj/MEtX/ygr
+        Lf8kIB3/LkJN/zFNV/8xTVf/KTE2/yMeHf8sO0P/Mk5Y/zJPWP8rOT//IhIN/yo9R/9Br+6QAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAATLn5gjJWaf8iFAn/IhsY/xoBAP8bBgD/GgIA/yUjIv8lJCT/GwMA/xsG
+        AP8aAQD/Ix0a/ygsLv8dCQD/GwQA/xoAAP8hGBP/KS0t/x4QB/8aAQD/GgAA/x8SC/8kHBP/LD1H/0qz
+        7pAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABVvPmCNVdp/xkEAf8xQkv/XbPV/1yx2/9ZqdL/KCor/yYm
+        Jv9Yp9H/XLLb/1201v8wP0n/HQ8G/1CTuP9ettv/YLzZ/zhVZf8WBgX/RniV/2C+2/9hv9r/Qm2H/xkE
+        Af8uPkf/U7bukAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFzA+oI3WGn/EwAA/zxZaP998f//dt7//3jm
+        //8rMzX/KSwu/3bh//913///ffH//zlTY/8ZBgD/acP3/3rp//+A+P//RW+H/w0AAP9Zncb/f/b//4D4
+        //9Tj7L/FAAA/y4/Rv9Zue6QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAY8X9jDhVZP8QAAD/Plll/4z+
+        //+G7///hvH//ysyM/8oKiz/hO3//4bw//+N/v//O1Jg/xYEAP92zf//i/r//5H///9KcYj/CAAA/2Kl
+        y/+R////kv///1uVtv8RAAD/LTpB/2C88JUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABiteVoPmBz/xEA
+        AP8vNzv/UHqK/1F8jv9NdIf/JiYn/yUlJP9Mcob/UXyO/1B7iv8sMzb/HxgU/0dnd/9Tfo3/U4GM/zNA
+        R/8aFBP/PlZj/1SDjv9Ug43/PFNe/xMAAP8zRlH/ZsDxjQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAE2C
+        nwVhqM/ZJiUi/xAAAP8MAAD/DAAA/wwAAP8bDgj/Gw8J/w0AAP8MAAD/CwAA/xgKAv8eFRD/DwAA/wsA
+        AP8KAAD/FgUA/yAWEP8SAAD/CgAA/wsAAP8OAAD/Gw4E/1yewP5YmLsmAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAFucwh1osdjTP1lk/zdKVv85Tlr/Ok9b/zpPW/86T1v/Ok9b/zpPW/86T1v/Ok9b/zpP
+        W/86T1v/Ok9b/zpPW/86T1v/Ok9b/zpPW/85T1r/N0pX/z1UW/9hosXoYqnRPwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAGau2AZ4zPtygdz/kX/Z/4t/2f+Lf9n/i3/Z/4t/2f+Lf9n/i3/Z
+        /4t/2f+Lf9n/i3/Z/4t/2f+Lf9n/i3/Z/4t/2f+Lf9n/i3/Z/4uD4P+QeMz4fmmx2xoAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP////////////////4AAH/4AAAf8AAAD/AA
+        AAfgAAAH4AAAB+AAAAfgAAAH4AAAB+AAAAfgAAAH4AAAB/AAAAfgAAAH4AAAB+AAAAfgAAAH4AAAB+AA
+        AAfgAAAH4AAAB+AAAAfwAAAH8AAAD/gAAB/+AAB/////////////////KAAAABAAAAAgAAAAAQAgAAAA
+        AAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALcrMBEGadAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAdQlkBEGWaAQAAAAACteoBAAAAAAHJ9wsEhs9DBIHLSQZ9x0gEg8xIBYDJSAV+
+        yEgEg81IBnzHSAWAyUgEhtBHAKv6EQAAAAABo+8BAAAAAAD//wIWVXqzJSgw/yYkLP0iMDj/JiUs/yQq
+        M/8jLTb/JyIr/yIxN/8lJy/9JiQs/xdPcMgAuv8PAAAAAAAAAAAAlu5DJSk3/xpPcv4Mebr9JSks/gx4
+        uv4aT23+HzlL/gqEx/4mJS/+E2eW/hRjkf0mJTH/BInWTgAAAAAAAAAAAZfxSSUqNf8SY5P+A5Hm/yIx
+        O/8DkOb/FGCM/xtEX/8AoPj/Iy09/wx7vP8Me7j+JiYu/weH000AAAAAAAAAAAyW7UcjNkH/JiMh/iIu
+        Nv8nJSP/Ii0z/yQpLP8lJyj/Ii42/yYlJf8jLTP/JScp/iQwOP8PidRNAAAAAAAAAAAWpvhHJyc2/xh6
+        pf4Ot///JDVA/w62//8ZdJj/H05v/wrL//8kMUf/E5rT/xOaz/4nIzD/GJTZTQAAAAAAAAAAIqf2RiYy
+        Pf8jQFH/IF6C/yUqLf8gXIH/I0NU/yQ1P/8fZIr/Jikw/yFSbf8hTmX+Ji01/yOW3EwAAAAAAAAAAC+t
+        +UYnMz7/KkJO/y1hfv8nKi3/LWB9/ypFUv8oNj//LmmE/ycqL/8rVmr/K1Fh/iYtNf8unN1MAAAAAAAA
+        AAA6u/9GJik3/ziPpv9E2P//KTg//0TX//82h5n/Llh2/0jw//8oOEr/PrbX/z610v4lJDP/N6bfTAAA
+        AAAAAAAAR7j6Ris6Q/8kISH/KDE5/yUkJf8nLzf/Jyos/yYnKP8oMDf/JSQl/ycvM/8mJyj+KTM5/0On
+        4EwAAAAAAAAAAF3H/0kmLjj/UIWU/mzJ5v8tODz/bMjn/0x/i/86VGf/dt74/ys4Q/9dqr7/X6i6/iQn
+        Mf9UsN9NAAAAAAAAAABtz/9BJjA9/0hwdf5nsb/9Jyor/mewv/5GbG/+NUZU/nHDzf4lKzP+WZOe/leP
+        l/4kLDj/ZLznTAAAAAAAAAAAAAAAAElyh6opMTn/Jy02/S85Pv8nLTb/KzM6/y43PP8mLDX/MDg+/ygw
+        OP0mLTT/Rmt+wJT//wwAAAAAAAAAAAAAAADE6P8HgNX6RH7X+k170vhLf9j7S37V+kt80/lLgNj8S3vS
+        +Et+1vpMgNb4SJnt+w0AAAAAlOn7AQAAAAAAAAAAWZe4AQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAABKepEBVJGxAQAAAAD//wAA//8AAMADAADAAwAAwAMAAMADAADAAwAAwAMAAMAD
+        AADAAwAAwAMAAMADAADAAwAAwAMAAP//AAD//wAA
+</value>
+  </data>
 </root>
