--- a/Launchpad-LED-Editor/Properties/Resources.resx
+++ b/Launchpad-LED-Editor/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="icon32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon32x32.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="LedMask" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\LedMask.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
